--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "node setup.js && next build",
-    "start": "next start",
+    "start:prod": "node setup.js && next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.27.0",
     "@editorjs/image": "^2.8.1",
     "@editorjs/paragraph": "^2.9.0",
+    "@prisma/client": "^4.15.0",
     "@tinymce/tinymce-react": "^4.3.0",
     "fs-extra": "^11.1.1",
     "next": "13.4.5",
@@ -32,7 +33,11 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.15.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
